assets/stylesheets/master.css
/*RESET*/

@font-face { font-family: 'Lumos'; src: url('MagicSchoolOne.ttf'); }

body, h1, h2, h3, p, div, nav, ul, li {
  margin: 0;
  padding: 0;
  background: transparent;
  font-family: inherit;
  color: inherit;
}

h1{
  margin-top:40px;
  font-family: 'Lumos';
  font-size: 70px;
  color: #422900;
}

h3{
  font-family: 'Lumos';
  font-size: 30px;
  color: #422900;
}

ul {
  list-style: none;
  padding-left:0px;
  padding-bottom:15px;
}

ul li {
  font-family: 'Lumos';
  font-size: 30px;
  color: #422900;
}

button {
  background: none;
  border: 1px solid #422900;
  border-radius: 5px;
  font-family: 'Lumos';
  font-size: 20px;
  color: #422900;
}

button:hover {
  cursor: pointer;
}

button:focus {
  outline: none;
}


#canvas {
  position: relative;
  margin: 0 auto;
}

#game-canvas, #background-canvas {
  position: absolute;
}

/*NAV MENU*/

.nav-button{
  position:absolute;
  top: 15px;
  left: 15px;
}

.nav-button.info {
  top: 15px;
  left: 85px;
}

.sound-button{
  position :absolute;
  top: 15px;
  left: 148px;
  width:33px;
  height:33px;
}

.intro-text {
  letter-spacing: .15em;
  width:300px;
}

.nav-menu {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-image: url('../backgrounds/menu-background.jpg');
  background-size: cover;
  width: 900px;
  height: 675px;
  border: none;
  outline: none;
}

.nav-menu-overlay {
  position: absolute;
  background: transparent;
  height: 1500px;
  width: 1500px;
}

.nav-menu p {
  font-family: 'Tangerine', cursive;
  font-size: 35px;
  color: #422900;
  text-align: justify;
  width: 500px;
  /*font-family: 'Tangerine', cursive;
font-family: 'Italianno', cursive;*/
}

.info-modal {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.info-modal p {
  width: 600px;
  margin-top: 200px;
  text-align: center;
}

.info-modal li {
  padding-top:10px;
  text-align: center;
}

.info-modal a {
  color: inherit;
  text-decoration: none;
}

